# EnergyTracer

./: .coveragerc-ci  .gitignore  .pre-commit-config.yaml  EXPERIMENT_GUIDE.md  LICENSE  OPEN_DATA.md  README.md  init.bat  init.sh  pyproject.toml  run_experiment.bat  run_experiment.sh  start_measurement.sh
.github/workflows/: lint.yaml  main.yaml
lib/: ssh_setup.sh
scripts/lib/: ssh_setup.sh
scripts/prehook/: block_example_edits.py
src/: analyzer.py  main.py
src/analysis/: generate_report.py  statistical_analysis.py
src/analysis/utils/: get_hardware_details.py
src/examples/java/: CodeWithSmell.java  CodeWithoutSmell.java
src/examples/python/: code_with_smell.py  code_without_smell.py
src/measure/: abstractEnergyProfiler.py  abstract_energy_profiler.py  carbonEnergyProfiler.py  carbon_energy_profiler.py  macEnergyProfiler.py  mac_energy_profiler.py  measure.py
src/plot/: generate_plot.py  generate_plots.py
src/plot/utilities/: metrics_extractors.py  padding.py
src/python/: file_with_code_smell.py  file_with_pattern.py  file_without_code_smell.py  file_without_pattern.py
src/runners/: detect.py  java_runner.py  python_runner.py  runner.py
src/utilities/: cleaner.py  log.py  parser.py  save_CSV.py  save_csv.py
test/: test_analyzer.py  test_main.py
test/analysis/: test_generate_report.py  test_statistical_analysis.py
test/analysis/utils/: test_get_hardware_details.py
test/measure/: test_carbon_energy_profiler.py  test_energy_profilers.py  test_mac_energy_profiler.py
test/plot/: test_generate_plots.py
test/plot/utilities/: test_metrics_extractors.py  test_padding.py
test/runners/: test_detect.py  test_java_runner.py  test_python_runner.py
test/utilities/: test_parser.py  test_save_CSV.py  test_save_csv.py
