[project]
name = "energytracer"
version = "0.1.0"
license = { text = "CC BY-NC-SA 4.0" }
description = "A tool to measure and compare the energy consumption of Python code variants, with a focus on identifying the impact of code smells."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alive-progress>=3.3.0",
    "codecarbon>=3.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "zeus-apple-silicon>=1.0.4; sys_platform == 'darwin'",
]

[project.scripts]
ET = "src.main:cli"
EnergyTracer = "src.main:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
